crates/plotnik-tests/tests/02-parser/recovery_incomplete/error_trailing_comment_at_eof.txt
Q = (ERROR ;x
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:14
  |
1 | Q = (ERROR ;x
  |              ^
  |
help: add `)` to close the node
